--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -21,6 +21,12 @@
 	{% endif %}
 	</div>
 	
+	{% if category %}
+		<a href="/rango/category/{{ category.slug }}/add_page/">Add a page</a>
+	{% else %}
+		No category here by that name.
+	{% endif %}
+	
 	<a href="/rango/">Index</a><br />
 	
 </body>
