--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -1,23 +1,18 @@
-<!DOCTYPE html>
-
+{% extends 'rango/base.html' %}
 {% load staticfiles %}
 
-<html>
-	<head>
-		<title>Rango</title>
-	</head>
-	
-	<body>
-		<h1>Rango says...</h1>
-		<div>
-			here is the about page <br />
-			This tutorial has been put together by {{ boldmessage }}<br />
-		</div>
-		<div>
-			<a href="/rango/">Index</a><br />
-			<img src="{% static "images/rango_and_fish.jpg" %}" alt="Picture of rango and a fish" />
-		</div>
+{% block title_block %}
+	About
+{% endblock %}
+
+{% block body_block %}
+	<h1>Rango says...</h1>
+	<div>
+		here is the about page <br />
+		This tutorial has been put together by {{ boldmessage }}<br />
+	</div>
+	<div>
+		<img src="{% static "images/rango_and_fish.jpg" %}" alt="Picture of rango and a fish" />
 		<img src="{{ MEDIA_URL }}cat.jpg" alt="Picture of a cat" />
-	</body>
-	
-</html>
+	</div>
+{% endblock %}
