--- a/templates/rango/base.html
+++ b/templates/rango/base.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+{% load rango_template_tags %}
 {% load staticfiles %}
 
 <html>
@@ -13,6 +14,11 @@
 	<body>
 		<div>
 			{% block body_block %}
+			{% endblock %}
+		</div>
+		<div>
+			{% block sidebar_block %}
+				{% get_category_list category %}
 			{% endblock %}
 		</div>
 		<hr />
