--- a/templates/rango/base.html
+++ b/templates/rango/base.html
@@ -1,9 +1,10 @@
-<!DOCTYPE html>
 {% load rango_template_tags %}
+<!DOCTYPE html>
 {% load staticfiles %}
 
 <html>
-	<head>
+	<head lang="en">
+		<meta charset="UTF-8" />
 		<title>
 			Rango -
 			{% block title_block %}
@@ -24,8 +25,15 @@
 		<hr />
 		<div>
 			<ul>
-				<li><a href="{% url 'add_category' %}">Add New Category</a></li>
+			{% if user.is_authenticated %}
+				<li><a href="{% url 'restricted' %}">Restricted Page</a></li>
+				<li><a href="{% url 'logout' %}">Logout</a></li>
+				<li><a href="{% url 'add_category' %}">Add a New Category</a></li>
+			{% else %}
+				<li><a href="{% url 'login' %}">Sign In</a></li>
+				<li><a href="{% url 'register' %}">Sign Up</a></li>
 				<li><a href="{% url 'about' %}">About</a></li>
+			{% endif %}
 				<li><a href="{% url 'index' %}">Index</a></li>
 			</ul>
 		</div>
