--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -9,7 +9,7 @@
 	<h1>Rango says...</h1>
 	<div>
 		here is the about page <br />
-		This tutorial has been put together by {{ boldmessage }}<br />
+		This tutorial has been put together by {{ boldmessage }}. visits: {{ visits }}<br />
 	</div>
 	<div>
 		<img src="{% static "images/rango_and_fish.jpg" %}" alt="Picture of rango and a fish" />
