--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -10,7 +10,7 @@
 	{% if user.is_authenticated %}
 		howdy {{ user.username }}!
 	{% else %}
-		hey there partner!
+		hey there partner! visits: {{ visits }}
 	{% endif %}
 	
 	<div>
